# transformer_from_scratch

./: .gitignore  README.md  pyproject.toml
src/: config.py  dataset.py  model.py  train.py
