[tool.poetry]
name = "transformer-from-scratch"
version = "0.1.0"
description = ""
authors = ["Jorit Studer <jorit.studer@gmail.com>"]
readme = "README.md"

packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
