[tool.poetry]
name = "transformer-from-scratch"
version = "0.1.0"
description = ""
authors = ["Jorit Studer <jorit.studer@gmail.com>"]
readme = "README.md"

packages = [{ include = "src" }]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
show-fixes = true

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "W",    # pycodestyle
    "E",    # pycodestyle
    "I",    # isort
    "UP",   # pyupgrade
    "PL",   # Pylint
    "T201", # Print Statement
]
ignore = ["PLR0913", "E203", "E501"] # Black takes care of line-too-long

[tool.ruff.per-file-ignores]
"{tests,docs}/*" = ["PLR2004", "T201"]
"*/{__init__.py}" = [
    "F821",
] # temporarily ignore ruff undefined name errors for dataset aliases

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
datasets = "^2.16.1"
tokenizers = "^0.15.0"
tensorboard = "^2.15.1"
torchmetrics = "^1.3.0.post0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
